Projects and name added

--- a/helpful-material.html
+++ b/helpful-material.html
@@ -44,6 +44,10 @@
 
     <div id="content">
       <h2 class="mt-4">Other Projects</h2>
+      <ul>
+        <li><a href="https://github.com/aashish-ak/search_guru">A MEAN Stack Web Scraping app</a></li>
+        <li><a href="https://github.com/aashish-ak/CNN-from-Scratch">A CNN Digit Recogniser App built using Flask</a></li>
+      </ul>
     <ul>
       <li><a href="https://github.com/jbaltazar03/ansible-installApache">Ansible(An automation tool) - Sample script</a></li>
     </ul>
@@ -127,7 +131,7 @@
     <br>
   </div>
   </div>
-	
+
   <footer id="footer">
     <h3><span id="toggle-social-btn">Social Links <i class="fa fa-arrow-up"></i></span></h3>
     <div class="social-icons">
